--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Devel-Ladybug-Net
-version:             0.399_001
+version:             0.399_002
 abstract:            ~
 license:             open_source
 author:              
@@ -14,6 +14,7 @@ requires:
     Data::Validate::URI:           0.05
     Devel::Ladybug:                0.399001
     Email::Address:                1.889
+    File::Tempdir:                 0.02
     Net::Subnets:                  0.21
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
