--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,28 @@
 --- #YAML:1.0
-name:                Devel-Ladybug-Net
-version:             0.401
-abstract:            ~
-license:             open_source
-author:              
+name:               Devel-Ladybug-Net
+version:            0.402
+abstract:           ~
+author:
     - Alex Ayars <pause@nodekit.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Data::Validate::Domain:        0.09
-    Data::Validate::Email:         0.04
-    Data::Validate::IP:            0.08
-    Data::Validate::URI:           0.05
-    Devel::Ladybug:                0.4
-    Email::Address:                1.889
-    File::Tempdir:                 0.02
+license:            open_source
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Data::Validate::Domain:  0.09
+    Data::Validate::Email:  0.04
+    Data::Validate::IP:   0.08
+    Data::Validate::URI:  0.05
+    Devel::Ladybug:       0.41
+    Email::Address:       1.889
+    File::Tempdir:        0.02
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
